fix for overlapping text

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 article {
   box-sizing: border-box;
   flex-grow: 1;
+  min-height: 430px;
   width: 100%;
   max-width: 1440px;
   min-width: 1000px;
